# sira

./: .dockerignore  .earthlyignore  .editorconfig  .env.test  .eslintrc.js  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint.json  .npmrc  .pre-commit-config.yaml  .prettierignore  .releaserc.json  .shellcheckrc  ACCURATE_REFACTOR_PLAN.md  ACKNOWLEDGMENTS.md  API-DOCS.md  API.md  API_中转站成本优化策略手册.md  ARCHITECTURE_REFACTOR_PLAN.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMUNITY_BUILDING_PLAN.md  COMMUNITY_SHARING_STRATEGY.md  COMPREHENSIVE_ERROR_ANALYSIS.md  CONTRIBUTING.md  CONTRIBUTION_GUIDE_VIDEO_PLAN.md  CONTRIBUTOR_RECRUITMENT_GUIDE.md  Cargo.toml  DEMO.md  DEPENDENCY_MANAGEMENT_GUIDE.md  DEPENDENCY_REFACTOR_PLAN.md  DEVELOPER_ROADMAP.md  DIRECTORY_STRUCTURE.md  DISCLAIMER.md  DOCKER_IMPROVEMENT_PLAN.md  Dockerfile  Dockerfile-master  Dockerfile.builder  (+90 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  codeql-config.yml  config.yml  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  documentation.yml  feature-request.md  feature-request.yml  question.yml  security-issue.md
.github/ISSUE_TEMPLATES/: bug-report.md  documentation.md  feature-request.md
.github/copilot/: eslint-fix.md  performance-optimization.md  test-generation.md
.github/workflows/: auto-merge.yml  cache-config.yml  ci.yml  code-quality.yml  codeql-analysis.yml  copilot-review.yml  coverage.yml  dependency-review.yml  deploy-staging.yml  deploy.yml  dprint.json  industrial-testing.yml  integration-test.yml  lighthouse.yml  notify.yml  performance-monitoring.yml  performance-tests.yml  pr-review.yml  production-monitoring.yml  release.yml  rollback.yml  security-scan.yml  super-linter.yml  system-monitoring.yml
.husky/: pre-commit
ai-gateway/: .eslintrc.js  .gitignore  CODE_OF_CONDUCT.md  DEPLOYMENT-GUIDE.md  Dockerfile  Dockerfile-master  OPERATIONS-GUIDE.md  README-AI.md  README-INTEGRATIONS.md  README.md  demo-industrial-testing.js  package-lock.json  package.json  run-industrial-tests.js  test-ai-gateway.js  test-config.json
ai-gateway/.github/: dependabot.yml
ai-gateway/admin/: apps.js
ai-gateway/config/: ai-providers.yml  gateway.config.yml  system.config.yml
ai-gateway/docs/: api-integration-guide.md  provider-comparison.md
ai-gateway/lib/: ab-test-manager.js  api-key-manager.js  batch-processing-manager.js  benchmark-test-cases.js  complexity-analyzer.js  conversation-manager.js  e2e-testing.js  error-handler.js  game-ai-manager.js  image-generation-manager.js  image-generator-manager.js  index.js  industrial-testing-framework.js  intelligent-routing-manager.js  load-testing.js  logger.js  model-training-manager.js  multilingual-manager.js  parameter-manager.js  performance-benchmark-manager.js  performance-testing.js  plugin-installer.js  plugins.js  price-monitor-manager.js  prompt-template-manager.js  reliability-testing.js  report-generator.js  routing-decision-engine.js  rules-engine.js  streaming-manager.js  stress-testing.js  test-report-generator.js  usage-analytics.js  voice-processor-manager.js  webhook-manager.js
ai-gateway/locales/: zh-CN.json
ai-gateway/scripts/: benchmark-performance.sh  deploy-production.sh  deploy-staging.sh  generate-analytics-report.sh  manage-ab-tests.sh  (+24 more)
api-gateway/: .gitignore  Dockerfile  README.md  docker-compose.yml  env.template  package.json
api-gateway-v2/: Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  env.template  jest.config.js  package.json
docker/: docker-compose.test.yml
docs/: ACKNOWLEDGMENTS.md  API-DOCS.md  CHANGELOG.md  CI-CD-GUIDE.md  DEPLOYMENT-GUIDE.md  DISCLAIMER.md  OPERATIONS-GUIDE.md  PROJECT-STRUCTURE.md  README-AI.md  README-INTEGRATIONS.md  README.md  REPAIR_PLAN.md  SECURITY.md  SIRA_FUTURE_BLUEPRINT.md  SIRA_VS_MAINSTREAM_ANALYSIS.md  TODO.md  TROUBLESHOOTING.md  _config.yml  contributing-new.md  core-positioning.md  fail-fast-guide.md  future-roadmap-todo.md  index.html  market-research-report.md  project-value-and-roadmap.md  tools-integration-guide.md
examples/: README.md
k8s/: config.yml  configmap.yaml  deployment.test.yaml  deployment.yml  hpa.yaml  hpa.yml  redis-deployment.yaml
kong/: docker-compose.yml  kong.conf  kong.yml
layers/rust/ai-backends/: Cargo.toml
layers/rust/ai-backends/src/: client.rs  error.rs  lib.rs  load_balancer.rs  providers.rs  router.rs  types.rs
layers/rust/gateway/: Cargo.toml
layers/rust/gateway/src/: error.rs  handlers.rs  lib.rs  main.rs  middleware.rs  router.rs  server.rs  types.rs  websocket.rs
layers/rust/intelligence/: Cargo.toml
layers/rust/intelligence/src/: adaptive_learning.rs  context_analyzer.rs  decision_engine.rs  error.rs  learning_engine.rs  lib.rs  types.rs
layers/rust/kernel/: Cargo.toml
layers/rust/kernel/src/: error.rs  kernel.rs  lib.rs  main.rs  message.rs  plugin.rs  resource.rs  service.rs
layers/rust/session/: Cargo.toml
layers/rust/session/src/: error.rs  event_handler.rs  lib.rs  memory_store.rs  session_manager.rs  session_store.rs  types.rs
layers/rust/storage-backends/: Cargo.toml
layers/rust/storage-backends/src/: error.rs  file_backend.rs  lib.rs  memory_backend.rs  storage_client.rs  types.rs
layers/rust/tools/: Cargo.toml
layers/rust/tools/src/: builtin_tools.rs  error.rs  lib.rs  orchestration_engine.rs  tool_executor.rs  tool_plugin.rs  tool_registry.rs  types.rs
layers/rust/utils/: Cargo.toml
layers/rust/utils/src/: crypto.rs  error.rs  lib.rs  string_utils.rs  time.rs
layers/rust/vcp/: Cargo.toml
layers/rust/vcp/src/: adaptive_controller.rs  chain_generator.rs  error.rs  lib.rs  metacognition.rs  recursive_engine.rs  thinking_chain.rs  thinking_node.rs  types.rs
legacy-src/: test-config.json
scripts/: alert-manager.sh  autoscale.sh  benchmark-performance.sh  deploy.sh  maintenance.sh  monitor-system.sh  monitor.sh  performance-optimizer.sh
src/: DEPLOYMENT-GUIDE.md  TROUBLESHOOTING.md  demo-industrial-testing.js  run-industrial-tests.js  test-ai-gateway.js  test-config.json
(+773 files in other folders)
