[workspace]
members = [
    "layers/rust/kernel",
    "layers/rust/core",
    "layers/rust/utils",
    "layers/rust/gateway",
    "layers/rust/ai-backends",
    "layers/rust/intelligence",
    "layers/rust/tools",
    "layers/rust/vcp",
    "layers/rust/session",
    "layers/rust/storage-backends",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8" # For load balancing and decision making
regex = "1.10"
futures = "0.3"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
md-5 = "0.10"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
hex = "0.4"
urlencoding = "2.1"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["full"] }
axum = { version = "0.6", features = ["json", "multipart", "ws"] }
axum-extra = { version = "0.7", features = ["typed-header"] }
headers = "0.3"
mime = "0.3"
url = "2.4"
http = "0.2"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli"] }
matchit = "0.7"
subtle = "2.4"
