[package]
name = "sira-ai-backends"
version = "0.1.0"
edition = "2021"
description = "AI Backends - Multi-provider AI service integration"
license = "Apache-2.0"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
sira-core = { path = "../core" }
sira-utils = { path = "../utils" }

# HTTP client
reqwest.workspace = true

# Additional utilities
regex.workspace = true
futures.workspace = true
bytes.workspace = true
url.workspace = true
uuid.workspace = true
chrono.workspace = true
base64.workspace = true
rand.workspace = true

[features]
default = ["openai", "anthropic"]
openai = []
anthropic = []
google = []
azure = []
all = ["openai", "anthropic", "google", "azure"]
