[package]
name = "sira-kernel"
version = "0.1.0"
edition = "2021"
description = "Sira Microkernel - Unified plugin management and service orchestration"
license = "Apache-2.0"
authors = ["Sira Team"]

[[bin]]
name = "sira-kernel"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Plugin system
libloading = "0.8"
abi_stable = "0.11"

# Communication
tokio-util = "0.7"

# Configuration
config = "0.14"
toml = "0.8"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
once_cell = "1.19"

# HTTP client for service discovery
reqwest = { version = "0.11", features = ["json"] }

# CPU detection
num_cpus = "1.0"

[dev-dependencies]
tempfile = "3.0"
criterion = "0.5"
