[package]
name = "sira-session"
version = "0.1.0"
edition = "2021"
description = "Session Management - Session lifecycle and state persistence"
license = "Apache-2.0"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
sira-core = { path = "../core" }
sira-utils = { path = "../utils" }

# Additional dependencies for session management
regex.workspace = true
futures.workspace = true
bytes.workspace = true
uuid.workspace = true
chrono.workspace = true

# Optional dependencies for different storage backends
redis = { version = "0.23", optional = true }
tokio-postgres = { version = "0.7", optional = true }
postgres-types = { version = "0.2", optional = true }
mysql_async = { version = "0.32", optional = true }

[features]
default = ["memory"]
memory = []
redis = ["dep:redis"]
postgres = ["dep:tokio-postgres", "dep:postgres-types"]
mysql = ["dep:mysql_async"]
full = ["memory", "redis", "postgres", "mysql"]
