[package]
name = "sira-utils"
version = "0.1.0"
edition = "2021"
description = "Utility library for Sira AI Gateway"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.0", features = ["full"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
anyhow = "1.0"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
md-5 = "0.10"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
pbkdf2 = "0.12"
hex = "0.4"
urlencoding = "2.1"

[features]
default = ["crypto", "async"]
crypto = []
async = ["tokio"]
full = ["crypto", "async"]
